Changes for 3.2.3rc1

New features:

Bug fixes:
...G...... [ZBX-11479] fixed threaded metric to handle interruption by a signal (vso)
........S. [ZBX-11534] fixed default operation step duration to be included in minimal step calculation instead of overriding (vso)
.......PS. [ZBX-11573] fixed possible crash when polling vmware.hv.health.status (wiper)
...G...... [ZBX-11528] fixed zabbix_get to match zabbix_server protocol (vso)
....I..... [ZBX-10979] Changed vmware.vm.cpu.ready item units and description (wiper)

--------------------------------------------------------------------------------
Changes for 3.2.2

New features:
A.F....... [ZBX-1357] updated English (United States), Ukrainian translations; thanks to Zabbix translators (zalex_ua)

--------------------------------------------------------------------------------
Changes for 3.2.2rc1

New features:
A.F.....S. [ZBXNEXT-3451] improved nested host group selection, added data sorting in multiselect and added '*' support in group names (Oleg, wiper)
..F....... [ZBXNEXT-3425] implemented more compact problem view in triggers list, event details and history of events (Ivo)
.......PS. [ZBXNEXT-2010] added vmware.hv.datastore.size keys for VMware datastore capacity monitoring (wiper)
........S. [ZBXNEXT-1859] improved performance by not inserting events of auto registration if no such action was enabled, insert/update/select in a bulk on auto registration data from proxy (Sasha, vso)
..FG.....T [ZBXNEXT-3487] added new key for virtual memory monitoring on Windows (vso, wiper)
A.......S. [ZBXNEXT-3457] added support of user macros for trigger tags; dropped forward slash restriction in "Tag name" and "Tag for matching" (Sasha, vso)
........S. [ZBX-10694] added rollup health sensor item to vmware hypervisor template (wiper)
........S. [ZBXNEXT-2969] added support for suffixed and negative trigger function parameters (gleb)

Bug fixes: